--- a/desafios/desafio 12/estilo/style.css
+++ b/desafios/desafio 12/estilo/style.css
@@ -51,7 +51,10 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3vw;
+    font-size: 3.5vw;
+}
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -60,14 +63,28 @@ section.normal {
 
 }
 section.imagem {
-    background-color: rgba(53, 53, 53, 0.842);
+    background-color: rgba(0, 0, 0, 0.521);
     color: white;
+    box-shadow: inset 6px  6px 13px 0px rgba(0, 0, 0, 0.322);
+    background-size: cover;
+    background-attachment: fixed;
 }
-section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.26);
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.534);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
     
+    
+}
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    
+
+}
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
     
 }
 
